{
    "name": "Player1",
    "maps": [
        {
            "name": "Player1",
            "id": "1146303f-91ad-4efc-a250-5ac347c897f2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "0c06fc2e-c03d-4182-b45e-c3a7a2f3ef69",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a2867a95-5af3-4462-8a36-ddc81a7ab9ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "1daf9279-5b96-427a-800e-636da4e65806",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slam",
                    "type": "Button",
                    "id": "6f974148-8a7b-4ca8-b5c7-643429069806",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash WASD",
                    "type": "PassThrough",
                    "id": "8fb2e689-e0ef-4258-aeec-4bedcfefb93f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash  Arrows",
                    "type": "PassThrough",
                    "id": "8211506b-88bd-4fa0-825e-5bd252ce81fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash  5123",
                    "type": "PassThrough",
                    "id": "16705aac-8f06-43dc-8a7e-87253f2f8a85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash  IJKL",
                    "type": "PassThrough",
                    "id": "de23f853-6d68-4325-a564-62b75ea33be3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "29bcfc81-f714-4710-a748-5645c3bc5308",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5dcaeac5-42b8-418a-8b17-031460e0d84a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "711ca3cb-5602-4669-b2f9-e2c87adbb99f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5d1a56e5-b804-4b4f-85e4-d580f16ec214",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c7d6bf21-4c91-4f03-a68b-69b800b22785",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "3e13e8f5-bc5a-4d57-89c5-d352686f22ea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5980b25c-feb0-494b-beba-061dbb859fa8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "99f20de2-6254-48fd-9340-67176e6f67fb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ad9c62ca-1592-447f-9784-039b5aad253b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e8843e66-8d31-4f11-b9e7-bb692adb2568",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "5123",
                    "id": "82c36372-1da5-40fd-a132-84dcd0b8d95d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8ad2ade2-a6c1-4ff8-a277-01080202bd48",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "73a8bbe3-1ef7-471a-a845-8c9f4eb1b4ed",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a7fc0c4-5690-44a2-b765-6cdcd4002974",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52605e2a-716c-422c-b11f-6c65f540246c",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "IJKL",
                    "id": "93351ffe-e266-4265-83ae-e8202dddce4d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4058ab79-7245-4f0b-90b9-fb2b2e644019",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "87ddc5b3-e5a8-4d8b-81ee-6eb7c75ffed2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "640a0ca4-b2dc-4d4a-91d9-8e8c01ede894",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cf37d46e-947d-4814-aacc-a7bbb1ecac71",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0c580f56-1c31-4853-9e04-ffd255b9f206",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b4caffc-fe07-46a3-8140-e2406532749d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06f61648-cf27-4fd0-af99-8ab82b7797b6",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d4250fc-8f37-430a-9793-3355d87041c7",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c791220-4282-43f4-b061-133b094f326f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55acbf41-9f96-475c-9557-307ea61d59af",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8317d1a-c3b5-4757-b1f7-6688e237dffb",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be2ecec3-48b7-475b-97d8-8a956eca6142",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2;Keyboard3",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bec7fbe-de2f-41a6-bcb4-1407b554b6ca",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD 1D Axis",
                    "id": "7d04780d-ae36-404a-a9b2-613d88186b13",
                    "path": "1DAxis",
                    "interactions": "MultiTap(tapCount=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Dash WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7eea532f-bad8-4475-8a76-3ee50b367438",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Dash WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff3cdecf-936b-476c-b21c-b4a9198578a5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Dash WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows 1D Axis",
                    "id": "13c4d73e-17e5-466c-b586-247dce1b721c",
                    "path": "1DAxis",
                    "interactions": "MultiTap(tapCount=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Dash  Arrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "94d697b3-3491-4178-bc85-a921d40b2a60",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Dash  Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "345d6819-0c88-4efa-a0e1-094cf2757264",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Dash  Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "5123 1D Axis",
                    "id": "c3c7b42e-8732-4fc6-bf25-bdc624da42a8",
                    "path": "1DAxis",
                    "interactions": "MultiTap(tapCount=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Dash  5123",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9a8e15e1-9b50-4637-9aca-49e32af800ec",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Dash  5123",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "88da2fb3-660d-439a-a620-f5aadabfd5ce",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Dash  5123",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "IJKL 1D Axis",
                    "id": "c8f8605f-95fe-46f7-931e-97fbdfee26ad",
                    "path": "1DAxis",
                    "interactions": "MultiTap(tapCount=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Dash  IJKL",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9063975b-1214-453f-b33e-cce7433dbe0c",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Dash  IJKL",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bf690181-e2c7-49f1-bcc9-ac2b14efa950",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard4",
                    "action": "Dash  IJKL",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard1",
            "bindingGroup": "Keyboard1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard2",
            "bindingGroup": "Keyboard2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard3",
            "bindingGroup": "Keyboard3",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard4",
            "bindingGroup": "Keyboard4",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}